make swagger better
